<resources>
    <string name="app_name">YingLi EV</string>
    <string name="m1立即体验">Try it now</string>
    <string name="m2下一步">Next</string>
    <string name="m3完成">Done</string>
    <string name="m4服务器错误">Server error</string>
    <string name="m5拍照">Take a photo</string>
    <string name="m6从相册选取">Choose from photos</string>
    <string name="m7取消">Cancel</string>
    <string name="m8警告">Warning</string>
    <string name="m9确定">Enter</string>
    <string name="m10删除">Delete</string>
    <string name="m11扫描结果">Scanning result</string>
    <string name="m12配置">Configuration</string>
    <string name="m13控制提示">Control</string>
    <string name="m14添加问题提示">Add questions</string>
    <string name="m15控制密码">password</string>
    <string name="m16返回">Back</string>
    <string name="m17停止配置">Stop configuration</string>
    <string name="m18注册失败">Registration failed</string>
    <string name="m19是否退出当前账户">Sign out?</string>
    <string name="m20用户名密码错误">User name or password error</string>
    <string name="m21用户名密码为空">User name or password is empty</string>
    <string name="m25请输入用户名">Enter your username</string>
    <string name="m26请输入密码">Enter your password</string>
    <string name="m22忘记密码">Forgot password</string>
    <string name="m23注册">Sign up</string>
    <string name="m24登陆">Sign in</string>
    <string name="m27温馨提示">Note</string>
    <string name="m28原密码">Old password</string>
    <string name="m浏览账户">Demo</string>
    <string name="m29发送到邮箱">After successful, the new password will be sent to the account bound mailbox</string>
    <string name="m30请输入正确的用户名">Please enter correct username</string>
    <string name="m31发送邮件失败">Email sending failed</string>
    <string name="m32填写资料注册新用户">Fill in the information</string>
    <string name="m33同意本公司各项用户条款及隐私政策">User agreement</string>
    <string name="m34选择用户协议">Please tick user Agreement</string>
    <string name="m35请输入正确邮箱格式">Please enter the correct email box format Please enter email in correct form</string>
    <string name="m36超出版本限制注册用户数量">Users number exceeds limit</string>
    <string name="m37服务器错误">Server error</string>
    <string name="m38注册错误">Registration error</string>
    <string name="m39采集器序列号或校验码错误">Datalogger SN or checkcode incorrect</string>
    <string name="m40用户名已被使用">Registered username</string>
    <string name="m41代理商编码错误">Agency ID error</string>
    <string name="m42注册成功">Registered successfully</string>
    <string name="m43采集器序列号已经存在">Existing datalogger SN</string>
    <string name="m44服务器错误提示">Server error</string>
    <string name="m45服务器错误提示2">Server error2</string>
    <string name="m46采集器10位提示">Datalogger error</string>
    <string name="m47不能找到用户名">Username can not be found</string>
    <string name="m48打开定位开关">Location service is disabled</string>
    <string name="m49定位提示跳转">Back to \Settings\ page?</string>
    <string name="m50我">Me</string>
    <string name="m51账号管理">Account management</string>
    <string name="m52消息中心">Message center</string>
    <string name="m53关于">About</string>
    <string name="m54用户协议">User agreement</string>
    <string name="m55注销账号">Sign out</string>
    <string name="m56暂未开放">function is not ready</string>
    <string name="m57修改密码">Change password</string>
    <string name="m58修改手机号">Change cellphone number</string>
    <string name="m59修改邮箱">Change the email address</string>
    <string name="m60填入不带国家代码的手机号">Enter phone number without country code</string>
    <string name="m61输入邮箱地址">Enter E-Mail address</string>
    <string name="m62输入代理商编号">Enter the agency ID</string>
    <string name="m63系统错误">System error</string>
    <string name="m64原密码错误">Password incorrect</string>
    <string name="m65用户不存在">User does not exist</string>
    <string name="m66你的账号没有操作权限">Your account does not have permission to operate</string>
    <string name="m67参数设置成功">Parameter set successfully</string>
    <string name="m68请验证注册时填写的手机号码">Please verify the phone number</string>
    <string name="m69验证用户手机号码">Verify the user\'s phone number</string>
    <string name="m70验证用户邮箱">Verify the user\'s email address</string>
    <string name="m71您注册时填写的手机号是">You phone number used for registation is</string>
    <string name="m72请输入短信验证码">Enter verification code</string>
    <string name="m74验证码错误">Verification code wrong</string>
    <string name="m75发送验证码">Send verification code</string>
    <string name="m76国际区号错误">The country code for international telephone call is wrong</string>
    <string name="m77手机号格式错误">Phone number format is wrong</string>
    <string name="m78发送短信验证码不成功">Send verification code message failed</string>
    <string name="m79该手机号没有注册用户">No account related to this phone number</string>
    <string name="m80短信验证码请求已经失效">Verification code request failed Verification code request timeout</string>
    <string name="m81请输入正确的手机校验码">Please enter the correct phone verification code</string>
    <string name="m82是否更新">Update or not</string>
    <string name="m83立即更新">Update now</string>
    <string name="m84最新版本为">Latest version</string>
    <string name="m85暂不">Update later</string>
    <string name="m86您使用的是最新版本">Current version is the latest</string>
    <string name="m87请求苹果服务器失败">Apple Server Error</string>
    <string name="m88拨打电话">Do you need to make a call?</string>
    <string name="m89当前版本">current version:</string>
    <string name="m90用户名">Username</string>
    <string name="m91密码">Password</string>
    <string name="m92重复密码">Repeat password</string>
    <string name="m93重复输入密码">Repeat password</string>
    <string name="m94电子邮箱">Email</string>
    <string name="m95联系电话">Phone</string>
    <string name="m96代理商编号">Agency ID</string>
    <string name="m97输入代理商编号">Enter the agency ID</string>
    <string name="m98请输入相同的密码">Please enter the same password</string>
    <string name="m99用户名必须大于3位">Username must be 3 or more characters</string>
    <string name="m100密码必须大于6位">Password must be 6 or more characters</string>
    <string name="m104输入电话号码">Enter phone number</string>
    <string name="m101添加设备">Add device</string>
    <string name="m102充电桩">Charger</string>
    <string name="m103充电">ON</string>
    <string name="m104充电记录">Record</string>
    <string name="m105桩体设置">Setting</string>
    <string name="m106选择充电桩">select Charger</string>
    <string name="m107连接">connect</string>
    <string name="m108停止充电">OFF</string>
    <string name="m109输入充电桩序列号添加充电桩">Input charger ID to add charger</string>
    <string name="m212暂时还没有设备">No device</string>
    <string name="m110A枪">Outlet A</string>
    <string name="m111B枪">Outlet B</string>
    <string name="m112C枪">Outlet C</string>
    <string name="m112交流">AC</string>
    <string name="m113直流">DC</string>
    <string name="m114单枪">1 outlet</string>
    <string name="m115双枪">Dual outlet</string>
    <string name="m116无">Null</string>
    <string name="m117空闲">Available</string>
    <string name="m118充电中">Charging</string>
    <string name="m119准备中">Preparing</string>
    <string name="m120充电结束">Finish</string>
    <string name="m121故障">Faulted</string>
    <string name="m122不可用">Unavailable</string>
    <string name="m123暂停充电">SuspendedEV</string>
    <string name="m124已经注销">Cancelled</string>
    <string name="m125启用中">Starting</string>
    <string name="m126已经工作过">Have worked</string>
    <string name="m127设置金额不能为0">Cost settings cannot be 0</string>
    <string name="m128设置电量不能为0">Energy settings cannot be 0</string>
    <string name="m129时长设置不能为空">Time settings can not be empty.</string>
    <string name="m130未设置开始时间">No start time was set</string>
    <string name="m131空闲状态无法直接开始充电">You cannot start charging directly. Please connect the vehicle to the charging Point first.</string>
    <string name="m132切换">Switch</string>
    <string name="m133添加">Add</string>
    <string name="m134是否确定删除设备">Are you sure you want to delete the device?</string>
    <string name="m确认删除">Are you sure you want to delete the authorized user?</string>
    <string name="m135删除成功">Deleted successfully</string>
    <string name="m136请输入充电桩ID">Enter charger ID</string>
    <string name="m137扫码添加">Scan the code to add</string>
    <string name="m138添加充电桩">Add charger</string>
    <string name="m139添加成功">Added successfully</string>
    <string name="m140不能为空">Can\'t be empty!</string>
    <string name="m141参数设置">Parameter setting</string>
    <string name="m142授权管理">Authorization</string>
    <string name="m143基本参数">Basic parameter</string>
    <string name="m144重要数据">Important data</string>
    <string name="m145其他数据">Other data</string>
    <string name="m213输入更改的设置">Input new settings</string>
    <string name="m146充电桩ID">Charger ID</string>
    <string name="m147授权认证秘钥">Authorization key</string>
    <string name="m148基础参数">Basic parameters</string>
    <string name="m149电桩名称">Charger name</string>
    <string name="m150国家城市">Country and city</string>
    <string name="m151站点">Site</string>
    <string name="m152充电费率">Rate</string>
    <string name="m153功率设置">Power Setting</string>
    <string name="m154充电模式">Charging model</string>
    <string name="m155高级设置">Advance settings</string>
    <string name="m156充电桩IP">IP address</string>
    <string name="m157网关">Gateway address</string>
    <string name="m158子网掩码">Subnet mask</string>
    <string name="m159网络MAC地址">MAC</string>
    <string name="m160服务器URL">Server URL</string>
    <string name="m161DNS地址">DNS</string>
    <string name="m217扫码刷卡">APP</string>
    <string name="m218仅刷卡充电">RFID</string>
    <string name="m219插枪充电">Plug&amp;Charge</string>
    <string name="m162添加授权">Add authorized</string>
    <string name="m163输入用户名添加授权用户">Enter a user name to add an authorized user</string>
    <string name="m164注册新用户">Sign up</string>
    <string name="m165填写资料注册新用户">Fill in the information</string>
    <string name="m166请输入用户名车牌电话邮箱">Please enter user name</string>
    <string name="m167现在正处于时段预约状态">If you need to start charging immediately, please cancel the current reservation setting and reset the time!</string>
    <string name="m168搜索">Search</string>
    <string name="m169连接成功">Connection OK</string>
    <string name="m170请将充电枪插入车辆">Please insert the charging gun into the vehicle!</string>
    <string name="m171蓝牙">Bluetooth</string>
    <string name="m172连接充电桩需打开蓝牙">Open bluetooth to connect to the charger</string>
    <string name="m173我的设备">My device list</string>
    <string name="m174可配对设备">Matchable device</string>
    <string name="m175配件">Fittings</string>
    <string name="m176确认">Confirm</string>
    <string name="m177输入格式不正确">Format is wrong,please enter again</string>
    <string name="m178定时">Timer</string>
    <string name="m179新增">Add</string>
    <string name="m180预设充电方案时长">Preset scheme-length:</string>
    <string name="m181设置定时">Set the timer</string>
    <string name="m182保存">Save</string>
    <string name="m183开启">Start</string>
    <string name="m184关闭">End</string>
    <string name="m185未设置">Not Set</string>
    <string name="m186每天">Everyday</string>
    <string name="m187删除">Delete</string>
    <string name="m207时">hour</string>
    <string name="m208分">min</string>
    <string name="m209预设">Preset</string>
    <string name="m210请输入金额">Please input amount of money</string>
    <string name="m211请输入电量">Please input electricity quantity</string>
    <string name="m188过压">Overvoltage</string>
    <string name="m189已充电量">Energy</string>
    <string name="m190充电费率">Rate</string>
    <string name="m191已充时长">Time</string>
    <string name="m192消费金额">Cost</string>
    <string name="m193当前电流">Current</string>
    <string name="m194当前电压">Voltage</string>
    <string name="m195充电结束提示拔枪">After charging, please unplug the charging gun and put it back in position</string>
    <string name="m214请连接充电枪到车辆">Please connect the charging gun to the vehicle.</string>
    <string name="m215电桩故障">charging Point failure, please switch to other charging Point.</string>
</resources>