<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/headerView"
    android:orientation="vertical"
    tools:context=".activity.AddChargingActivity">

    <include layout="@layout/header_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xa138"
        android:gravity="center"
        android:text="@string/m109输入充电桩序列号添加充电桩"
        android:textColor="@color/main_theme_text_color"
        android:textSize="@dimen/xa40"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_input_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xa30"
        android:layout_marginRight="@dimen/xa30"
        android:layout_marginTop="@dimen/xa136"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/m146充电桩ID"
        android:textSize="@dimen/xa30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xa1"
        android:layout_marginLeft="@dimen/xa30"
        android:layout_marginRight="@dimen/xa30"
        android:layout_marginTop="@dimen/xa10"
        android:background="@color/title_3" />


    <Button
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xa88"
        android:layout_marginLeft="@dimen/xa75"
        android:layout_marginRight="@dimen/xa75"
        android:layout_marginTop="@dimen/xa96"
        android:background="@drawable/selector_button_maincolor"
        android:stateListAnimator="@null"
        android:text="@string/m9确定"
        android:textColor="@color/headerView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_scan_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/xa60"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/xa24"
            android:paddingRight="@dimen/xa24">

            <ImageView
                android:layout_width="@dimen/xa200"
                android:layout_height="@dimen/xa200"
                android:src="@drawable/icon_scan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/xa30"
                android:background="@null"
                android:gravity="center"
                android:text="@string/m137扫码添加"
                android:textColor="@color/main_theme_text_color"
                android:textSize="@dimen/xa36" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
