<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_background">

    <include layout="@layout/toobar_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xa40"
        android:layout_marginEnd="@dimen/xa40"
        android:focusable="false"
        android:hint="@string/m90用户名"
        android:focusableInTouchMode="false"
        app:hintTextAppearance="@style/hintAppearence"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/forgot_user"
            android:drawablePadding="8dp"
            android:paddingBottom="@dimen/xa30"
            android:textSize="@dimen/size_content_sp_14" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xa40"
        android:layout_marginEnd="@dimen/xa40"
        android:focusable="false"
        android:hint="@string/m94电子邮箱"
        android:focusableInTouchMode="false"
        app:hintTextAppearance="@style/hintAppearence"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/forgot_email"
            android:drawablePadding="8dp"
            android:paddingBottom="@dimen/xa30"
            android:textSize="@dimen/size_content_sp_14" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xa40"
        android:layout_marginEnd="@dimen/xa40"
        android:focusable="false"
        android:hint="@string/m104输入电话号码"
        android:focusableInTouchMode="false"
        app:hintTextAppearance="@style/hintAppearence"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/forgot_phone"
            android:drawablePadding="8dp"
            android:paddingBottom="@dimen/xa30"
            android:textSize="@dimen/size_content_sp_14" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btFinish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xa88"
        android:layout_marginLeft="@dimen/xa75"
        android:layout_marginRight="@dimen/xa75"
        android:layout_marginTop="@dimen/xa80"
        android:background="@drawable/shape_gradient"
        android:text="@string/m3完成"
        android:textColor="@color/headerView" />

</LinearLayout>