<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical">

    <include layout="@layout/toobar_title" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/headerView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xa90"
                android:layout_marginLeft="@dimen/xa30"
                android:layout_marginTop="@dimen/xa20"
                android:background="@drawable/editext_bg"
                android:layout_marginRight="@dimen/xa30"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/xa24"
                android:paddingRight="@dimen/xa24"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/xa40"
                    android:layout_height="@dimen/xa40"
                    android:src="@drawable/forgot_user" />


                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/xa12"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:hint="@string/m25请输入用户名"
                    android:textColor="@color/title_1"
                    android:textColorHint="@color/title_3"
                    android:textSize="@dimen/size_content_sp_14" />
            </LinearLayout>




            <LinearLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xa90"
                android:layout_marginLeft="@dimen/xa30"
                android:layout_marginTop="@dimen/xa20"
                android:background="@drawable/editext_bg"
                android:layout_marginRight="@dimen/xa30"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/xa24"
                android:paddingRight="@dimen/xa24"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <ImageView
                    android:layout_width="@dimen/xa40"
                    android:layout_height="@dimen/xa40"
                    android:src="@drawable/register_password" />


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/xa12"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:hint="@string/m26请输入密码"
                    android:textColor="@color/title_1"
                    android:textColorHint="@color/title_3"
                    android:textSize="@dimen/size_content_sp_14" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/til_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xa90"
                android:layout_marginLeft="@dimen/xa30"
                android:layout_marginTop="@dimen/xa20"
                android:background="@drawable/editext_bg"
                android:layout_marginRight="@dimen/xa30"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/xa24"
                android:paddingRight="@dimen/xa24"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <ImageView
                    android:layout_width="@dimen/xa40"
                    android:layout_height="@dimen/xa40"
                    android:src="@drawable/repeat_password" />


                <EditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/xa12"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:inputType="textPassword"
                    android:hint="@string/m93重复输入密码"
                    android:textColor="@color/title_1"
                    android:textColorHint="@color/title_3"
                    android:textSize="@dimen/size_content_sp_14" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/til_user_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xa90"
                android:layout_marginLeft="@dimen/xa30"
                android:layout_marginTop="@dimen/xa20"
                android:background="@drawable/editext_bg"
                android:layout_marginRight="@dimen/xa30"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/xa24"
                android:paddingRight="@dimen/xa24"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <ImageView
                    android:layout_width="@dimen/xa40"
                    android:layout_height="@dimen/xa40"
                    android:src="@drawable/register_email" />


                <EditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/xa12"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:hint="@string/m61输入邮箱地址"
                    android:textColor="@color/title_1"
                    android:textColorHint="@color/title_3"
                    android:textSize="@dimen/size_content_sp_14" />
            </LinearLayout>





            <Button
                android:id="@+id/btRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xa88"
                android:layout_marginLeft="@dimen/xa75"
                android:layout_marginTop="@dimen/xa80"
                android:layout_marginRight="@dimen/xa75"
                android:layout_marginBottom="@dimen/xa30"
                android:background="@drawable/shape_gradient"
                android:text="@string/m3完成"
                android:textColor="@color/headerView" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>